text alignment fix

--- a/main.css
+++ b/main.css
@@ -19,13 +19,13 @@
 	color: #FFFFFF;
 	font-size: 60px;
 	font-weight:bold;
-	text-align: left;
+	text-align: right;
 }
 
 .jumbotron p {
 	color: #FFFFFF;
 	font-size: 40px;
-	text-align: left;
+	text-align: right;
 }
 
 .jumbotron .container {
